src/App.css
#root {
  flex: 1 1 auto;
  align-self: stretch; /* take up the entire space of <body> */
  background-color: #ffffff;
}

#screen {
  display: flex;
}

/* editor on the left side */
#editor {
  width: 50vw;
  display: flex;
  flex-direction: column;
  align-self: stretch;
  padding: 5vh 0 10vw 0;
  gap: 2.5vh;

  /* editor header */
  > h1 {
    font-family: "Red Hat Display";
    text-align: center;
    padding: 1rem 0 1rem 0;
    font-size: 2rem;
    margin: 0;
    background-color: #c5050c;
    color: #ffffff;
  }

  /* editor body */
  > div {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0 5vw 0 5vw;
  }
}

#viewer {
  display: flex;
  flex-direction: column;
  width: 50vw;
  height: 100vh;
  position: fixed;
  right: 0;
  background-color: grey;

  > #menu {
    background-color: #353839;
    height: 4.5%;
    display: flex;
    justify-content: center;

    > button {
      padding: 0;
      border: 0;
      background-color: #353839;

      > img {
        width: 30px;
        height: 30px;
      }
    }
  }

  > #viewer-body {
    display: flex;
    height: 100%;
    padding: 1.5% 19% 4% 19%;

    > #pdf {
      display: flex;
      flex: 1 1 0;
      background-color: white;

      > #side {
        flex: 5;
        display: flex;
        flex-direction: column;
        background-color: #2b2e43;
      }

      > #main {
        flex: 8;
      }
    }
  }
}

#personal-details,
#experience,
#skills,
#education,
#achievements {
  h1 {
    font-family: "Red Hat Display";
    font-size: 1.5rem;
    color: black;
    margin-bottom: 0;
  }

  hr {
    border-color: #c5050c;
    margin-bottom: 1rem;
  }

  button {
    background-color: white;
    padding: 0;
    height: 25px;

    img {
      width: 25px;
      height: 25px;
    }
  }

  form {
    font-family: "Red Hat Text";
    display: flex;
    flex-direction: column;
    gap: 0.375rem;

    button {
      align-self: center;
    }

    .container {
      display: flex;
      gap: 1rem;

      .card {
        color: black;
        flex: 1 1 0; /* There is difference between 1 1 0 and 1 1 auto */
        display: flex;
        flex-direction: column;

        input,
        textarea {
          flex: 1 1 auto;
          font-family: "Red Hat Text";
          color: black;
          background-color: #dcdcdc;
          border-radius: 5px;
          border: 0;
          padding: 0.375rem 0.5rem 0.375rem 0.5rem;
        }

        input:focus,
        input:hover,
        textarea:focus,
        textarea:hover {
          outline: 2px solid #333333;
        }
      }
    }
  }
}

#personal-details {
  .container#picture {
    align-self: center;
  }
}

#experience,
#education {
  .panel {
    font-family: "Red Hat Text";
    display: flex;
    padding: 10px;
    margin-top: 5px;
    margin-bottom: 10px;
    align-items: center;
    border: 2px solid grey;
    border-radius: 10px;

    div {
      flex: 1 1 0;
      font-weight: 500;

      h3 {
        margin: 0;
      }
    }
  }

  #card-container {
    display: flex;
    justify-content: space-between;
    gap: 15px;
  }
}

#skills {
  form .container {
    display: flex;

    .category {
      flex: 3;
    }

    .skill {
      flex: 7;
    }

    input {
      font-family: "Red Hat Text";
      color: black;
      background-color: #dcdcdc;
      border-radius: 5px;
      border: 0;
      padding: 0.375rem 0.5rem 0.375rem 0.5rem;
      margin-bottom: 0.5rem;
    }

    button {
      margin-bottom: 0.5rem;
    }

    input:focus,
    input:hover {
      outline: 2px solid #333333;
    }
  }
}

#achievements {
  input {
    width: 200px;
    font-family: "Red Hat Text";
    color: black;
    background-color: #dcdcdc;
    border-radius: 5px;
    border: 0;
    padding: 0.375rem 0.5rem 0.375rem 0.5rem;
  }

  input:focus,
  input:hover {
    outline: 2px solid #333333;
  }

  .container {
    margin-top: 1rem;
    display: block;
  }

  button {
    background-color: #333333;
    color: white;
    padding: 5px 20px;
    margin: 3px 6px;
    text-align: center;
    display: inline-flex;
    align-items: center;
  }

  button:hover {
    text-decoration: line-through;
  }
}

#view-picture {
  height: 125px;
  width: 125px;
  border-radius: 50%;
  margin: 35px auto;
}

#view-contact {
  color: white;
  margin-left: 20%;

  h2 {
    border-bottom: 1px solid white;
    margin: 0;
  }

  ul {
    list-style: none;
    padding: 0;

    li {
      display: flex;
      flex-direction: column;
      font-weight: 800;

      span {
        font-weight: 200;
        font-size: 0.625rem;
      }
    }
  }
}

#view-intro {
  color: #2b2e43;

  h1 {
    font-size: 2rem;
    letter-spacing: 0.2rem;
    padding-top: 10%;
    padding-left: 5%;
    margin: 0;
    span {
      font-weight: 400;
    }
  }

  h2 {
    letter-spacing: 0.1rem;
    font-size: 1rem;
    padding-left: 5%;
    margin: 0;
  }

  p {
    font-size: 1rem;
    padding-left: 5%;
    margin: 0;
  }
}

